<resources>
    <string name="app_name">Enhanced Calculator App</string>
    <string name="enhanced_calculator_app">Enhanced Calculator App</string>
    <string name="select_the_calculator_you_would_like_to_use">Select the calculator you would like to use.</string>
    <string name="scientific_calculator">Scientific Calculator</string>
    <string name="conversion_calculator">Conversion Calculator</string>
    <string name="graphing_calculator">Graphing Calculator</string>
    <string name="calculator_icon">calculator icon</string>
    <string name="change_background">Change Background</string>
    <string name="todo">TODO</string>
    <string name="modulus">%</string>
    <string name="sin">sin</string>
    <string name="enter">enter</string>
    <string name="exponent">^</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="ce">CE</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="add">+</string>
    <string name="degree">Degree</string>
    <string name="radian">Radian</string>
    <string name="pi">π</string>
    <string name="generate_graphs">Generate Graphs</string>
    <string name="add_equation">Add Equation</string>
    <string name="set_bounds">Set Bounds</string>
    <string name="y_10_10">y: [-10, 10]</string>
    <string name="x_10_10">x: [-10, 10]</string>
    <string name="graphing_calc_icon">graphing calc icon</string>

    <string-array name="length_arrays">
        <item>Choose a unit of measure</item>
        <item>mm</item>
        <item>cm</item>
        <item>m</item>
        <item>km</item>
        <item>in</item>
        <item>ft</item>
        <item>mi</item>
    </string-array>

    <string-array name="length_arrays2">
        <item>Choose a unit of measure</item>
        <item>m</item>
        <item>cm</item>
        <item>m</item>
        <item>km</item>
        <item>in</item>
        <item>ft</item>
        <item>mi</item>
    </string-array>

    <string-array name="temperatureArray">
        <item>Choose a unit of measure</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
        <item>Rankine</item>
    </string-array>

    <string-array name="temperatureArray2">
        <item>Choose a unit of measure</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
        <item>Rankine</item>
    </string-array>

    <string-array name="volumeArray">
        <item>Choose a unit of measure</item>
        <item>ml</item>
        <item>liter</item>
        <item>cup</item>
        <item>pint</item>
        <item>quart</item>
        <item>gallon</item>
    </string-array>

    <string-array name="volumeArray2">
        <item>Choose a unit of measure</item>
        <item>ml</item>
        <item>liter</item>
        <item>cup</item>
        <item>pint</item>
        <item>quart</item>
        <item>gallon</item>
    </string-array>

    <string-array name="weight_arrays">
        <item>Choose a unit of measure</item>
        <item>oz</item>
        <item>lb</item>
        <item>US ton</item>
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
    </string-array>

    <string-array name="weight_arrays2">
        <item>Choose a unit of measure</item>
        <item>oz</item>
        <item>lb</item>
        <item>US ton</item>
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
    </string-array>


</resources>